[package]
name = "fixed_free_list"
version = "0.2.0"
edition = "2021"
authors = ["Atlas Dostal <email@atlasdostal.com>"]
repository = "https://github.com/rodolphito/fixed_free_list"
keywords = ["freelist", "fixed-size", "storage", "arena", "reference"]
categories = ["data-structures", "memory-management", "caching"]
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "A fixed-size free-list with optional key lifetime safety and macroless unique typing."

[dependencies]

[dev-dependencies]
rand = "0.8"

[features]
default = []
unstable = []
strict = []